Update guidance on essential information re: checks in progress

--- a/app/views/10/verification-report/essential-information.html
+++ b/app/views/10/verification-report/essential-information.html
@@ -83,9 +83,10 @@
           <h1 class="govuk-heading-l">
             Essential information
           </h1>
-          <p class="govuk-body">You should request these checks from the
-            relevant agencies and record the results when you have them. You can
-            carry on with the report and return to this section at any time.</p>
+          <p class="govuk-body">Request these checks from the relevant agencies
+            and record the results when you have them. If you are waiting on
+            checks, you can select this option, continue with the report and
+            update this section later.</p>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
