--- a/app/views/10/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/10/verification-report/electronic-monitoring-for-curfew.html
@@ -112,10 +112,9 @@
             </h1>
             <div id="electronic-monitoring-supporting-hint" class="govuk-hint">
               Include information here that supports your professional judgement.
-              <br/><br/>You should include anything of concern that you have
-              considered and how it has affected your recommendation.<br/><br/>
-              This will not be published in the final report but it will be
-              recorded.</div>
+              You should include anything of concern and explain how it has
+              affected your recommendation. This will not be published in the
+              final report but it will be recorded.</div>
             <textarea class="govuk-textarea" id="supporting-information-electronic-monitoring" name="supporting-information-electronic-monitoring" rows="5" aria-describedby="supporting-information-electronic-monitoring-hint">{{data['supporting-information-electronic-monitoring']}}</textarea>
           </div>
           <div class="govuk-button-group">
