--- a/app/views/10/verification-report/suitability-decision.html
+++ b/app/views/10/verification-report/suitability-decision.html
@@ -73,48 +73,75 @@
           <p class="govuk-body">This information will be included in the
             verification report which will be visible to the court and judiciary.</p>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-m">Based on the information you have from
-              agency checks and the defendant interview, what is the defendant
-              suitable for?</h2>
-            <div class="govuk-radios" data-module="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="suitable-for" name="suitable-for" type="radio" value="Unpaid work only" {{ checked("suitable-for", "Unpaid work only") }}>
-                <label class="govuk-label govuk-radios__label" for="suitable-for">
-                  Unpaid work only
-                </label>
+            <fieldset class="govuk-fieldset">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                <h2 class="govuk-fieldset__heading">Based on the information
+                  you have from agency checks and the defendant interview,
+                  what is the defendant suitable for?</h2>
+              </legend>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="suitability-decision" name="suitability-decision" type="radio" value="Unpaid work only" data-aria-controls="conditional-suitability-option" {{ checked("suitability-decision", "Unpaid work only") }}>
+                  <label class="govuk-label govuk-radios__label" for="suitability-decision">
+                    Unpaid work only
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-suitability-option">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="unpaid-work-only-rationale">
+                      Explain your rationale for unpaid work only
+                    </label>
+                    <textarea class="govuk-textarea" id="unpaid-work-only-rationale" name="unpaid-work-only-rationale" rows="4">{{data['unpaid-work-only-rationale']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="suitability-decision-2" name="suitability-decision" type="radio" value="Electronic monitoring curfew only" data-aria-controls="conditional-suitability-option-2" {{ checked("suitability-decision", "Electronic monitoring curfew only") }}>
+                  <label class="govuk-label govuk-radios__label" for="suitability-decision-2">
+                    Electronic monitoring curfew only
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-suitability-option-2">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="electronic-monitoring-curfew-only-rationale">
+                      Explain your rationale for Electronic monitoring curfew only
+                    </label>
+                    <textarea class="govuk-textarea" id="electronic-monitoring-curfew-only-rationale" name="electronic-monitoring-curfew-only-rationale" rows="4">{{data['electronic-monitoring-curfew-only-rationale']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="suitability-decision-3" name="suitability-decision" type="radio" value="Both unpaid work and electronic monitoring curfew" data-aria-controls="conditional-suitability-option-3" {{ checked("suitability-decision", "Both unpaid work and electronic monitoring curfew") }}>
+                  <label class="govuk-label govuk-radios__label" for="suitability-decision-3">
+                    Both unpaid work and electronic monitoring curfew
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-suitability-option-3">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="unpaid-work-rationale">
+                      Explain your rationale for unpaid work</label>
+                    <textarea class="govuk-textarea" id="unpaid-work-rationale" name="unpaid-work-rationale" rows="4">{{data['unpaid-work-rationale']}}</textarea>
+                  </div>
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="electronic-monitoring-curfew-rationale">
+                      Explain your rationale for electronic monitoring curfew</label>
+                      <textarea class="govuk-textarea" id="electronic-monitoring-curfew-rationale" name="electronic-monitoring-curfew-rationale" rows="4">{{data['electronic-monitoring-curfew-rationale']}}</textarea>
+                  </div>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="suitability-decision-4" name="suitability-decision" type="radio" value="Not suitable" data-aria-controls="conditional-suitability-option-4" {{ checked("suitability-decision", "Not suitable") }}>
+                  <label class="govuk-label govuk-radios__label" for="suitability-decision-4">
+                    Not suitable
+                  </label>
+                </div>
+                <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-suitability-option-4">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="not-suitable-rationale">
+                      Explain your rationale for why the defendant is not
+                      suitable</label>
+                    <textarea class="govuk-textarea" id="not-suitable-rationale" name="not-suitable-rationale" rows="4">{{data['not-suitable-rationale']}}</textarea>
+                  </div>
+                </div>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="suitable-for-2" name="suitable-for" type="radio" value="Electronic monitoring only" {{ checked("suitable-for", "Electronic monitoring only") }}>
-                <label class="govuk-label govuk-radios__label" for="suitable-for-2">
-                  Electronic monitoring curfew only
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="suitable-for-3" name="suitable-for" type="radio" value="Both unpaid work and electronic monitoring" {{ checked("suitable-for", "Both unpaid work and electronic monitoring") }}>
-                <label class="govuk-label govuk-radios__label" for="suitable-for-3">
-                  Both unpaid work and electronic monitoring curfew
-                </label>
-              </div>
-              <div class="govuk-radios__divider">or</div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="suitable-for-4" name="suitable-for" type="radio" value="Not suitable" {{ checked("suitable-for", "Not suitable") }}>
-                <label class="govuk-label govuk-radios__label" for="suitable-for-4">
-                  Not suitable
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="govuk-form-group">
-            <h2 class="govuk-label-wrapper">
-              <label class="govuk-label govuk-label--m" for="proposal">
-                Explain your decision
-              </label>
-            </h2>
-            <div id="suitability-explanation-hint" class="govuk-hint">
-              You should include the things you have taken into consideration in making your decision.
-              <br>Keep your explanation focussed on the checks you have done, and the things you found out at interview.
-            </div>
-            <textarea class="govuk-textarea" id="suitability-explanation" name="suitability-explanation" rows="9" aria-describedby="suitability-explanation-hint">{{data['suitability-explanation']}}</textarea>
+            </fieldset>
           </div>
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
