Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,10 @@
       <p><a class="govuk-link" href="/10/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3543">
+            Fix inaccuracies within the prototype.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3537">
             Content check updates, holistic look at content to drive consistency
             and increment to v10.</a></p>
