--- a/app/views/10/verification-report/start-page.html
+++ b/app/views/10/verification-report/start-page.html
@@ -36,15 +36,15 @@
               <ul class="govuk-list govuk-list--bullet">
                 <li>their most serious offence is in scope for a community order
                   but not severe enough for a custodial sentence</li>
-                <li>they have entered a guilty anticipated plea</li>
+                <li>they have been identified as a guilty anticipated plea</li>
                 <li>they have no specific risk flags in NDelius </li>
                 <li>there are no case markers in Common Platform</li>
                 <li>they are at liberty on the day of their plea hearing</li>
               </ul>
-            <p class="govuk-body">Defendants from black and ethnic minority
-              backgrounds, female defendants and those aged between 18 to 25
-              years old are not eligible for verification reports. They must
-              receive a full pre-sentence report.</p>
+            <p class="govuk-body">When deciding  on suitability for a
+              verification report you should consider any complexities or
+              rehabilitative needs linked to race, age or sex on a case by case
+              basis.</p>
             <p class="govuk-body">There are also times when a sentencer may
               request a verification report either before or after a plea
               hearing, or after a trial. A probation officer may also assess
