:pencil2: Update informed consent guidance

--- a/app/views/10/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/10/verification-report/electronic-monitoring-for-curfew.html
@@ -71,10 +71,10 @@
             <h2 class="govuk-heading-m" for="consent-electronic-monitoring-curfew">
               Informed consent to an electronic monitoring curfew</h2>
             <div id="health-conditions-hint" class="govuk-hint">It is a legal
-              requirement that the defendant gives their informed consent to an
-              electronic monitoring curfew. If the defendant is not the main
-              occupier of the address, they must both give their informed
-              consent.</div>
+              requirement that the homeowner or main tenant gives their
+              informed consent for electronic monitoring equipment to be
+              installed at their property. If the defendant isn't the homeowner
+              or main tenant they will need to ask for permission.</div>
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
