--- a/app/views/10/verification-report/offences.html
+++ b/app/views/10/verification-report/offences.html
@@ -95,19 +95,19 @@
               <h3 class="govuk-heading-s" for="offence-1">
                 Enter the name of the offence and the date it was committed.
               </h3>
-              <input class="govuk-input" id="offence-1" name="offence-1" type="text" value="{{data['offence-1'] | default('Threaten a person with an offensive weapon / bladed article / corrosive substance in a private place')}}">
+              <input class="govuk-input" id="offence-1" name="offence-1" type="text" value="{{data['offence-1'] | default('Committed an act of criminal damage')}}">
             </div>
             <div class="govuk-form-group">
               <h3 class="govuk-heading-s" for="offence-1-information">
                 Enter additional information about this offence, for example the value of stolen goods.
               </h3>
-              <textarea class="govuk-textarea" id="offence-1-information" name="offence-1-information" rows="4" aria-describedby="offences-hint">{{data['offence-1-information'] | default('On 13/06/2023 at Kings Lynn unlawfully and intentionally, threatened another person namely Sarah Smith with an article to which section 139 of the Criminal Justice Act 1988 applies, namely a knife, in a private place, namely a flat, in such a way that there was an immediate risk of serious physical harm to that person.')}}</textarea>
+              <textarea class="govuk-textarea" id="offence-1-information" name="offence-1-information" rows="4" aria-describedby="offences-hint">{{data['offence-1-information'] | default('On 13/06/2023, unlawfully and intentionally, committed an act of criminal damage by scratching the paintwork on four cars causing damage to the value of £2,500.')}}</textarea>
             </div>
             <div class="govuk-form-group">
               <h3 class="govuk-heading-s" for="offence-1-act">
-                Act relating to offence
+                Act relating to offence.
               </h3>
-              <input class="govuk-input" id="offence-1-act" name="offence-1-act" type="text" value="{{data['offence-1-act'] | default('Contrary to section 52(1) and (6) of the Offensive Weapons Act 2019')}}">
+              <input class="govuk-input" id="offence-1-act" name="offence-1-act" type="text" value="{{data['offence-1-act'] | default('Contrary to section 1 (1) of the Crime and Disorder Act 1971')}}">
             </div>
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -121,19 +121,19 @@
               <h3 class="govuk-heading-s" for="offence-2-information">
                 Enter the name of the offence and the date it was committed.
               </h3>
-              <input class="govuk-input" id="offence-2-information" name="offence-2-information" type="text" value="{{data['offence-2-information'] | default('Affray')}}">
+              <input class="govuk-input" id="offence-2-information" name="offence-2-information" type="text" value="{{data['offence-2-information'] | default('Theft from a motor vehicle')}}">
             </div>
             <div class="govuk-form-group">
               <h3 class="govuk-heading-s" for="offence-1-information">
                 Enter additional information about this offence, for example the value of stolen goods.
               </h3>
-              <textarea class="govuk-textarea" id="offence-1-information" name="offence-1-information" rows="4" aria-describedby="offences-hint">{{data['offence-1-information'] | default('On 13/06/2023 at Kings Lynn when leaving the premises of another person, did they cause harm to that person, namely Sarah Smith, by pushing them away from the exit, causing them to fall into the wall and result in bruising.')}}</textarea>
+              <textarea class="govuk-textarea" id="offence-1-information" name="offence-1-information" rows="4" aria-describedby="offences-hint">{{data['offence-1-information'] | default('On 13/06/2023, unlawfully and intentionally, committed an act of theft from a motor vehicle by stealing a mobile phone to the value of £700.')}}</textarea>
             </div>
             <div class="govuk-form-group">
               <h3 class="govuk-heading-s" for="offence-1-act">
-                Act relating to offence
+                Act relating to offence.
               </h3>
-              <input class="govuk-input" id="offence-1-act" name="offence-1-act" type="text" value="{{data['offence-1-act'] | default('Contrary to Public Order Act 1986, s.3')}}">
+              <input class="govuk-input" id="offence-1-act" name="offence-1-act" type="text" value="{{data['offence-1-act'] | default('Contrary to the Theft Act 1968')}}">
             </div>
           </div>
           <div class="govuk-button-group">
