Improve content on unpaid work

--- a/app/views/10/verification-report/unpaid-work.html
+++ b/app/views/10/verification-report/unpaid-work.html
@@ -71,8 +71,8 @@
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="verify-dwp-involvement">Benefits</h2>
             <div id="verify-dwp-involvement-hint" class="govuk-hint">
-              Record any benefits that the defendant gets that may impact on
-              their eligibility or fitness for unpaid work.</div>
+              Record any benefits the defendant gets that may affect their
+              eligibility or fitness for unpaid work.</div>
             <textarea class="govuk-textarea" id="verify-dwp-involvement" name="verify-dwp-involvement" rows="5" aria-describedby="verify-dwp-involvement-hint">{{data['verify-dwp-involvement']}}</textarea>
           </div>
           <div class="govuk-form-group">
