--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,6 +10,14 @@
       {{ serviceName }}
     </h1>
     <h2 class="govuk-heading-m">v10</h2>
+      <p><a class="govuk-link" href="/11/verification-report/index.html">Prototype</a></p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3590">
+            Increment the prototype.</a></p>
+        </li>
+      </ul>
+    <h2 class="govuk-heading-m">v10</h2>
       <p><a class="govuk-link" href="/10/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
