:recycle: draftSaved changes to pageAction
This allows us to support different page actions such as add another
thing.

--- a/app/views/11/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/11/verification-report/electronic-monitoring-for-curfew.html
@@ -121,7 +121,7 @@
             <button class="govuk-button" data-module="govuk-button">
               Save and continue
             </button>
-            <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="draftSaved" value="true">
+            <button class="govuk-button govuk-button--secondary" data-module="govuk-button" name="pageAction" value="saveDraft">
               Save draft
             </button>
           </div>
