Essential information has a way to add addresses.

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -9,6 +9,7 @@
 @import "components/govuk-layout";
 @import "components/split-pane";
 @import "components/subnav";
+@import "components/ticket-panel";
 
 
 .not-known-on-form{
