--- a/app/views/11/verification-report/check-answers.html
+++ b/app/views/11/verification-report/check-answers.html
@@ -21,7 +21,7 @@
                 Choose sections</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential information">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential-information">
                 Essential information</a>
             </li>
             <li class="app-subnav__section-item">
