--- a/app/views/11/verification-report/addresses/add-address.html
+++ b/app/views/11/verification-report/addresses/add-address.html
@@ -60,6 +60,10 @@
             <button class="govuk-button" data-module="govuk-button">
               Save and return
             </button>
+            <!-- <button type="submit" disabled aria-disabled="true" class="govuk-button govuk-button--warning" data-module="govuk-button">
+              Delete address
+            </button>
+            <a href="#" class="govuk-link" style="font-weight: normal;">Cancel</a> -->
           </div>
         </form>
       </main>
