--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,13 @@
       <p><a class="govuk-link" href="/11/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3535">
+            Looking at a better way to capture addresses. We need the current
+            address to verify identity in court, other address to run checks on,
+            and addresses for curfew. This is in prep for a call with our SME
+            Faye Lundie.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3590">
             Increment the prototype.</a></p>
         </li>
