Remove logic from side nav

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,11 @@
       <p><a class="govuk-link" href="/12/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3598">
+            Remove choose sections page as users should consider both and maybe
+            remove, rather than have nothing and add.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3599">
             Essential information improvements, consider domestic abuse history
             and callouts, remove PND acronym.</a></p>
