track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,11 @@
       <p><a class="govuk-link" href="/12/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3618">
+            Move other addresses above checks, because you need all addresses
+            to then know where to do checks for.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3597">
             Improve how we record verification of the current address.</a></p>
           <p class="govuk-body">This also includes making sure all drop down
